tests/positive/test_macro.orb
import "util/io.orb";

eval (mac foo () {
    ret ();
});

eval (mac bar (a b) {
    ret \(,a ,b);
});

fnc main () () {
};