tests/negative/test_block_glob_exit.orb
eval (fnc foo () () {
    exit b0 true;
});

eval (block b0 () {
    foo;
});

fnc main () () {};